--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,12 @@
                 startPlacingToken('wendigo.png', 'Wendigo');
             }
             
+            // R - Rei Marrom
+            if (e.key === 'r' && !e.target.matches('input, textarea')) {
+                e.preventDefault();
+                startPlacingToken('Rei_marrom__2_.png', 'Rei Marrom');
+            }
+            
             // ============================================================
             // ATALHOS DE NAVEGAÇÃO ENTRE MAPAS
             // ============================================================
