--- a/index.html
+++ b/index.html
@@ -1799,13 +1799,13 @@
             // M - Wendigo
             if (e.key === 'm' && !e.target.matches('input, textarea')) {
                 e.preventDefault();
-                startPlacingToken('wendigo.png', 'Wendigo');
+                startPlacingToken('Wendigo.png', 'Wendigo');
             }
             
             // R - Rei Marrom
             if (e.key === 'r' && !e.target.matches('input, textarea')) {
                 e.preventDefault();
-                startPlacingToken('Rei_marrom__2_.png', 'Rei Marrom');
+                startPlacingToken('rei_marrom.png', 'Rei Marrom');
             }
             
             // ============================================================
